[package]
name = "datto_monitoring"
version = "0.1.0"
edition = "2021"
description = "A Rust CLI tool for monitoring backup histories of SaaS customers using the Datto API. The tool retrieves application backup statuses and generates alerts when specific failure conditions are met."
authors = ["Bryan Abbott <bryan.abbott01@pm.me>"]
repository = "https://github.com/whitefox82/datto_tools"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
log = "0.4.22"
env_logger = "0.11.5"